# test-vid-gen

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  PERSISTENCE_PLAN.md  README.md  SERVICES_AGENTS.md  app.py  config.py  config.yaml  cpu_runtime.py  engine.py  enums.py  image_routes.py  job_store.py  lite_clone_server.py  manifest  models.py  routes.py  routes_history.py  run_orchestrator.py
metadata-server/: Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml
metadata-server/alembic/versions/: 0001_initial_schema.py  20260415_a8b1b0d4cbd4_add_pod_run_id_unique_constraint.py  20260416_0002_add_stories_and_story_acts.py
metadata-server/app/: auth.py  converters.py  models.py  storage.py  types.py
metadata-server/app/routes/: audio.py
metadata-server/app/services/: runs.py  scripts.py  stories.py  voices.py
services/creepy-brain/: .env.example  Dockerfile  LOGGING_VERIFICATION.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  test_tts_pipeline.py  tsconfig.json
services/creepy-brain/alembic/: env.py
services/creepy-brain/alembic/versions/: 0001_initial_schema.py  0002_gpu_pod_created_at_default.py  0002_runchunk_status_to_chunkstatus.py  0003_runchunk_status_to_chunkstatus.py  0004_voice_audio_blob_type.py  0006_add_fk_blob_pod_refs.py  0007_voice_audio_blob_fk_and_default_index.py  0008_enum_check_constraints.py  0009_add_missing_fk_indexes.py  0010_add_cleanup_gpu_pod_step_name.py  0011_native_pg_enums.py  0012_add_chunk_audio_mp3.py  0014_add_test_workflow_step_names.py  0015_add_waveform_overlay.py  0016_add_sfx_audio_enums.py  0017_add_audio_design.py  0018_add_normalized_text_to_chunks.py  0020_add_subtitle_srt_blobtype.py  0021_add_vastai_gpuprovider.py  0022_add_recon_orphaned_pods_stepname.py  0023_add_scene_music_prompt.py
services/creepy-brain/app/: __init__.py  config.py  db.py  log_buffer.py  logging.py  main.py  metrics.py  middleware.py  schemas.py  validation_limits.py
services/creepy-brain/app/audio/: __init__.py  encoding.py  validation.py
services/creepy-brain/app/engine/: __init__.py  db_helpers.py  engine.py  models.py  registry.py  resource_controller.py  retry_resume_controller.py  runner.py  scheduler.py  state_repository.py  task_supervisor.py
services/creepy-brain/app/gpu/: __init__.py  base.py  lifecycle.py  runpod.py  schemas.py  vastai.py
services/creepy-brain/app/llm/: audio_design.py  client.py  image_prompts.py  pricing.py  prompts.py
services/creepy-brain/app/models/: __init__.py  base.py  enums.py  gpu_pod.py  json_schemas.py  json_types.py  run.py  schemas.py  step_params.py  story.py  types.py  voice.py  workflow.py
services/creepy-brain/app/pipeline/: __init__.py  architect.py  formatting.py  models.py  orchestrator.py  prompt_builder.py  reviewer.py  writer.py
services/creepy-brain/app/routes/: blobs.py  costs.py  health.py  image.py  runs.py  stories.py  voices.py  workflows.py
services/creepy-brain/app/schemas/: prompts.py  run.py  (+3 more)
services/creepy-brain/postgres/: ensure-hatchet.sql  init-hatchet.sql
services/creepy-brain/static/: dashboard.html  index.html
services/creepy-brain/tests/: test_gpu_lifecycle.py  test_music_generation.py  test_runpod_parse_pod.py  test_scene_grouping.py  test_tts_ellipsis_pause.py  test_ui_schema.py  test_validation_bounds.py  test_vastai_provider.py  test_workflow_step_output.py
story-engine/: pyproject.toml
story-engine/app/: main.py
story-engine/app/llm/: client.py  prompts.py
story-engine/app/models/: act.py  critique.py
story-engine/app/pipeline/: act_reviewer.py  outline_reviewer.py  writer.py
story-engine/app/ui/: script.js  style.css
(+239 files in other folders)
