[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metadata-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1",
    "creepy-pasta-protocol @ file://../creepy_pasta_protocol",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.6",
    "httpx>=0.27",
    "types-aiofiles>=24.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true
