[project]
name = "creepy-brain"
version = "0.1.0"
description = "Content Pipeline Workflow Orchestration Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "anthropic>=0.25.0",
    "python-multipart>=0.0.9",
    "hatchet-sdk>=1.0.0",
    "croniter>=2.0.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.0",
    "runpod>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["prometheus_client.*", "prometheus_fastapi_instrumentator.*", "hatchet_sdk.*", "soundfile.*", "httpx.*", "croniter.*", "runpod.*"]
ignore_missing_imports = true
